# telco_churn

./: pyproject.toml
config/: config_preprocessing.yaml
data/preprocessed/: preprocessed_telco.csv
src/: main.py
src/data_loader/: base_loader.py  csv_loader.py  factory.py
src/data_transform/: __init__.py  base_transformer.py  encoder.py  factory.py  imputer.py  minmax_scaler_transfomer.py  pipeline.py  scaler.py  standard_scaler_transfomer.py
tests/: test_data_loader.py
