[tool.poetry]
name = "telco-churn"
version = "0.1.0"
description = ""
authors = ["MohammadZeineddine <99921709+MohammadZeineddine@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^2.2.3"
numpy = "^2.2.0"
scikit-learn = "^1.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

